deploy-cityguideapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cityguide-app
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cityguide-app
  template:
    metadata:
      labels:
        app: cityguide-app
    spec:
      containers:
      - name: cityguide-app
        image: arindambanerjee/cityguide:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cityguide-app
  namespace: ingress-basic
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: cityguide-app
